--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@prisma/client": "^5.15.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.11",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
