--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.15.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.11",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.395.0",
     "next": "14.2.3",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
