--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.606.0",
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.3",
     "nookies": "^2.5.2",
+    "pt-br": "link:dayjs/locale/pt-br",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
