--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
